instance-setup.tf
#####################################################
# Define providers
#####################################################

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}


# Configure the AWS Provider
provider "aws" {
  region = "eu-west-1"
}

# #####################################################
# # Define base networking, vpc & subnets
# #####################################################

resource "aws_vpc" "main" {
  cidr_block = "172.16.0.0/16"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main"
  }
}

resource "aws_subnet" "sb_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.16.10.0/24"
  availability_zone = "eu-west-1a"
}

resource "aws_subnet" "sb_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.16.11.0/24"
  availability_zone = "eu-west-1b"
}

resource "aws_route_table" "allow" {
  vpc_id = aws_vpc.main.id

  route { ## update to be your ip
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "allow-ssh"
  }
}

resource "aws_route_table_association" "sb_a_rta" {
  subnet_id      = aws_subnet.sb_a.id
  route_table_id = aws_route_table.allow.id
}

####################################################
# ALB routes incoming traffic to EC2
####################################################

resource "aws_instance" "webserver" {
ami           = "ami-0aca9de1791dcec2a" // Deb-11
instance_type = "t2.medium"
subnet_id     = aws_subnet.sb_a.id
key_name      =  aws_key_pair.ssh_key.key_name
tags          = {
  Name        = "My EC2 instance",
  }
root_block_device {
    volume_size = 20
  }
}


resource "aws_key_pair" "ssh_key" {
  key_name   = "ssh-key"
  public_key = var.public_ssh
  }

resource "aws_network_interface" "web_interface" {
  subnet_id   = aws_subnet.sb_a.id
}

resource "aws_eip" "ssh_ip" {
 vpc      = true
 instance = aws_instance.webserver.id
}

# resource "aws_spot_instance_request" "cheap_webserver" {
#   spot_price    = "0.0100"
#   ami           = "ami-0aca9de1791dcec2a" // Deb-11
#   instance_type = "t2.medium"
#   subnet_id     = aws_subnet.sb_a.id
#   key_name      =  aws_key_pair.ssh_key.key_name

#   tags = {
#     Name = "CheapWorker"
#   }
#   root_block_device {
#     volume_size = 20
#   }
# }

###################################################
# SSH security groups
####################################################

resource "aws_security_group" "tree_epi_app" {
name = "allow-all-sg"
vpc_id = aws_vpc.main.id
# Allow SSH 
ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }
}

resource "aws_network_interface_sg_attachment" "sg_attachment" {
  security_group_id    = aws_security_group.tree_epi_app.id
  network_interface_id = "${aws_instance.webserver.primary_network_interface_id}"
}
